css/style.scss
// Set up variables for all stylesheets to use
$brand-primary: #db1d0f;

$font-family-serif:
    Aleo, Georgia, "Times New Roman", Times, serif;
$font-family-sans-serif:
    "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$font-family-base: Cardo, $font-family-serif;
$primary-font-size: 1.3em;

// Used as the gutter for the navbar and text content on mobile.
$mobile-padding-outer: 5%;

$article-width: 600px;


// Import sub-stylesheets. Some of these stylesheets use variables set above,
// so it's important that the import statements come after the variable
// declarations.
@import '../bower_components/bootstrap/scss/bootstrap.scss';

@import 'footer.scss';
@import 'gallery.scss';
@import 'navbar.scss';


// Ensure that the element with class $content-class will always
// have aspect ratio $width : $height.
@mixin fixed-aspect-ratio($content-class, $width, $height) {
	position: relative;

	&::before {
		display: block;
		content: "";
		width: 100%;
		padding-top: ($height / $width) * 100%;
	}

	.#{$content-class} {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		height: 100%;
	}
}

@font-face {
	font-family: 'Aleo';
	src: url('/assets/fonts/aleo-regular-webfont.woff');
}

html,
body {
	// I'm not sure why this is required, but without it, I get an empty
	// space on the right of the page when the viewport is < 600px.
	overflow-x: hidden;
}

main {
	// Space between the navbar and the articles / Twitter feed beneath.
	padding-top: 50px;
}

article {
	// Provides space between successive articles.
	padding-bottom: 50px;
	font-size: $primary-font-size;

	.title {
		color: $brand-primary;
		font-size: 2em;

		a {
			text-decoration: none;

			&:hover {
				text-decoration: none;
			}
		}
	}

	.date-published {
		display: block;
		padding-bottom: 10px;
	}

	// Left and right gutters are placed on the paragraph and caption elements,
	// rather than the article tag, so that images expand to fill the full 
	// width of the screen on mobile.
	// 
	// These selectors should be kept in sync with the declaration below which
	// removes this padding for tablets and larger screens.
	// 
	// This is separate from the .content-block element because elements to which
	// these selectors are applied should only have padding added when they are
	// inside an <article> element (esp. .date-published).
	.title,
	p,
	figcaption,
	.date-published {
		padding-left: $mobile-padding-outer;
		padding-right: $mobile-padding-outer;
	}

	figure {
		padding-bottom: 20px;
	}

	figcaption {
		color: $gray-light;
		font-family: $font-family-sans-serif;
		font-size: 0.8em;
		padding-top: 5px;
	}

	img {
		width: 100%;

		@include center-block();
	}

	.note {
		color: $gray-light;
	}

	.youtube-container {
		@include fixed-aspect-ratio('youtube-video', 560, 315);
	}

	// Mosaic videos must have an 8x10 aspect ratio.
	.mosaic-container {
		@include fixed-aspect-ratio('mosaic-video', 560, 448);
	}
    
	.divider {
		text-align: center;
	}
}

// The outer padding is placed on this selector, separate from the .content selector,
// to allow for full-bleed images inside the .content element, which should not have
// the padding normally applied to other elements inside the .content element.
.content-block {
	padding-left: $mobile-padding-outer;
	padding-right: $mobile-padding-outer;
}

.text-secondary {
	color: $gray-light;
}

.page-title {
	padding-bottom: 30px;
}

.article-preview {
	font-size: $primary-font-size;
	padding-bottom: 60px;
}

.external-link-icon {
	padding-left: 10px;
}

.article-synopsis {
	padding-bottom: 20px;
}

// Tablets and up
@include media-breakpoint-up(md) {
	.content {
		width: $article-width;
		margin: 0 auto;

		article {
			// Reset the horizontal padding used for mobile devices.
			// This should be kept in sync with the selectors used for mobile
			// devices. 
			.title,
			p,
			figcaption,
			.date-published {
				padding-left: 0;
				padding-right: 0;
			}
		}
	}

	.content-block {
		padding-left: 0;
		padding-right: 0;
	}
}

